fix alignment by removing column gap

--- a/src/app/ui/account-creation/account-setup/SetupUI/QuestsWidget/styles.module.css
+++ b/src/app/ui/account-creation/account-setup/SetupUI/QuestsWidget/styles.module.css
@@ -192,6 +192,7 @@
     grid-template-columns: var(--grid-layout);
     grid-auto-rows: auto;
     row-gap: 1rem;
+    column-gap: 0;
   }
 
   .heading {
